examples/type_system/failing/85_hm_function_effect_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn io_add_one(x: Int) -> Int with IO { x + 1 }

fn apply_with_time(f: ((Int) -> Int with Time), x: Int) -> Int {
    f(x)
}

fn main() -> Unit {
    apply_with_time(io_add_one, 1)
}
